--- a/java/02对象和类.md
+++ b/java/02对象和类.md
@@ -141,6 +141,98 @@ public class Puppy {
 
 
 
+## 源文件声明规则
+
+- 一个源文件中只能有一个 public 类
+- 一个源文件可以有多个非 public 类
+- 源文件的名称应该和 public 类的类名保持一致。例如：源文件中 public 类的类名是 Employee，那么源文件应该命名为Employee.java。
+- 如果一个类定义在某个包中，那么 package 语句应该在源文件的首行。
+- 如果源文件包含 import 语句，那么应该放在 package 语句和类定义之间。如果没有 package 语句，那么 import 语句应该在源文件中最前面。
+- import 语句和 package 语句对源文件中定义的所有类都有效。在同一源文件中，不能给不同的类不同的包声明。
+
+
+
+## Java包
+
+包主要用来对类和接口进行分类。当开发 Java 程序时，可能编写成百上千的类，因此很有必要对类和接口进行分类。 
+
+
+
+## import 语句
+
+在 Java 中，如果给出一个完整的限定名，包括包名、类名，那么 Java 编译器就可以很容易地定位到源代码或者类。import 语句就是用来提供一个合理的路径，使得编译器可以找到某个类。
+
+例如，下面的命令行将会命令编译器载入 java_installation/java/io 路径下的所有类
+
+```java
+import java.io.*;
+```
+
+
+
+在下面例子中，我们创建两个类：**Employee** 和 **EmployeeTest**。
+
+首先打开文本编辑器，把下面的代码粘贴进去。注意将文件保存为 Employee.java。
+
+Employee 类有四个成员变量：name、age、designation 和 salary。该类显式声明了一个构造方法，该方法只有一个参数。
+
+```java
+import java.io.*;
+public class Employee {
+    String name;
+    int age;
+    String designation;
+    double salary;
+    // 构造器
+    public  Employee(String name){
+        this.name = name;
+    }
+    public  void empAge (int empAge){
+        age = empAge;
+    }
+    public void empDesignation(String empDesig){
+        designation = empDesig;
+    }
+    public  void empSalary(double empSalary){
+        salary = empSalary;
+    }
+    public  void printEmployee(){
+        System.out.println("名字："+name);
+        System.out.println("年龄："+age);
+        System.out.println("职位："+designation);
+        System.out.println("薪水："+salary);
+    }
+}
+
+```
+
+程序都是从main方法开始执行。为了能运行这个程序，必须包含main方法并且创建一个实例对象。
+
+下面给出EmployeeTest类，该类实例化2个 Employee 类的实例，并调用方法设置变量的值。
+
+将下面的代码保存在 EmployeeTest.java文件中。
+
+```java
+import java.io.*;
+public class EmployeeText {
+    public static void  main(String[] args){
+        Employee empOne = new Employee("yiyiyi");
+        Employee empTwo = new Employee("ererer");
+
+        empOne.empAge(996);
+        empOne.empDesignation("福报哥");
+        empOne.empSalary(88);
+        empOne.printEmployee();
+
+        empTwo.empAge(700);
+        empTwo.empDesignation("升天哥");
+        empTwo.empSalary(888);
+        empTwo.printEmployee();
+    }
+}
+
+```
+
 
 
 
